@@ -11,6 +11,7 @@ Fixed bugs
 - add missing library exports of SCIPchgVarLbGlobalExact(), SCIPchgVarUbGlobalExact(), SCIPinferVarLbConsExact(), and SCIPinferVarUbConsExact()
 - set small coefficients in SCIPvarGetActiveRepresentatives() to 0; in particular for (multi-)aggregations
 - add prefix TNY_ for tnycthread functions in order to avoid name clash with POSIX threads functions
+- provide memory allocation for implied integral binary and integer variables in dks heuristic to avoid data corruption
 
 @section RN1001 SCIP 10.0.1
 ***************************
